# codility

./: .travis.yml  CMakeLists.txt  README.md
Arrays/: OddOccurances.cpp
Challenges/: DwarfsRafting.cpp  FloodDepth.cpp  arrayinversioncount.cpp  rectanglebuilder.cpp  sockslaundering.cpp
Counting/: MaxCounters.cpp
Greedy algorithms/: MaxNonOverlappingSegments.cpp
PrefixSums/: CountDiv.cpp  MinAvgSlice.cpp
Prime_and_Composite/: MinPerimeterRectangle.cpp
Sorting/: NrOfDiscIntersections.cpp
Stacks_and_Queues/: stonewall.cpp
Time_Complexity/: TapeEquilibrium.cpp
