project(codility)
cmake_minimum_required(VERSION 3.2)

add_executable( MinPerimeterRectangle  Prime_and_Composite/MinPerimeterRectangle.cpp )
add_executable( stonewall              Stacks_and_Queues/stonewall.cpp )
add_executable( TapeEquilibrium        Time_Complexity/TapeEquilibrium.cpp )
add_executable( NrOfDiscIntersections  Sorting/NrOfDiscIntersections.cpp )
add_executable( OddOccurances    Arrays/OddOccurances.cpp )
add_executable( MinAvgSlice            PrefixSums/MinAvgSlice.cpp )
add_executable( MaxCounters            PrefixSums/MaxCounters.cpp )

