project(codility)
cmake_minimum_required(VERSION 3.1)

macro(use_cxx11)
  if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
    endif ()
  else ()
    set (CMAKE_CXX_STANDARD 11)
  endif ()
endmacro(use_cxx11)

add_executable( MinPerimeterRectangle  Prime_and_Composite/MinPerimeterRectangle.cpp )
add_executable( stonewall              Stacks_and_Queues/stonewall.cpp )
add_executable( TapeEquilibrium        Time_Complexity/TapeEquilibrium.cpp )
add_executable( NrOfDiscIntersections  Sorting/NrOfDiscIntersections.cpp )
add_executable( OddOccurances    Arrays/OddOccurances.cpp )
add_executable( MinAvgSlice            PrefixSums/MinAvgSlice.cpp )
add_executable( MaxCounters            Counting/MaxCounters.cpp )
add_executable( FloodDepth             Challenges/FloodDepth.cpp )
add_executable( DwarfsRafting          Challenges/DwarfsRafting.cpp )

